<resources>
    <string name="app_name">Aplikacja testowa</string>
    <string name="edMail">Email</string>
    <string name="edPassword">Hasło</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Rejestracja</string>
    <string name="hiEmail">Podaj email</string>
    <string name="hiPassword">Podaj hasło</string>
    <string name="edFirstName">Imię</string>
    <string name="edLastName">Nazwisko</string>
    <string name="err_empty_filed">Pole nie może być puste</string>
    <string name="err_is_not_email">to nie jest email</string>
    <string name="createAccount">Utwórz konto</string>
    <string name="titleAdditional">Dodatkowe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Wylogowanie</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">Apka testowa</string>
    <string name="menu_subscribe">Subskrypcja</string>
    <string name="menu_discover">Odkrywanie</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
    <string name="episodes_count">%d epizodów</string>
</resources>