<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.register.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/login_horizontal_padding"
            android:paddingRight="@dimen/login_horizontal_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edFirstNameTextInputLayout"
                style="@style/TextInputLayout"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edFirstName"
                    style="@style/TextInputEditTextStyle"
                    android:autofillHints="@string/edFirstName"
                    android:hint="@string/edFirstName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edLastNameTextInputLayout"
                style="@style/TextInputLayout"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edLastName"
                    style="@style/TextInputEditTextStyle"
                    android:autofillHints="@string/edLastName"
                    android:hint="@string/edLastName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edEmailTextInputLayout"
                style="@style/TextInputLayout"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edEmail"
                    style="@style/TextInputEditTextStyle"
                    android:autofillHints="@string/edMail"
                    android:hint="@string/edMail"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edPasswordTextInputLayout"
                style="@style/TextInputLayout"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPassword"
                    style="@style/TextInputEditTextStyle"
                    android:autofillHints="@string/edPassword"
                    android:hint="@string/edPassword"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>